<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.overne.petagram.Contacto">

    <include android:id="@+id/miActionBar"
        layout="@layout/action_bar"
        />

    <android.support.design.widget.TextInputLayout
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/miActionBar"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:id="@+id/nombre2"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_3"
        android:layout_below="@id/til"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emaill2"
            android:hint="@string/email"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_4"
        android:layout_below="@id/til_3"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwor"
            android:hint="@string/passwor"
            android:password="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_4"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descripcion2"
            android:hint="@string/descripcion"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_enviar"
        android:id="@+id/buttonEnviar"
        android:textColor="@color/colorBlanco"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="0.5"
        android:layout_marginRight="-5dp"
        android:layout_marginLeft="-5dp"
        android:layout_marginBottom="-6dp"
        android:theme="@style/miBotonRaised"
        />

</RelativeLayout>
